--- a/stm32_diff_wheel.ioc
+++ b/stm32_diff_wheel.ioc
@@ -196,7 +196,7 @@ TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,OCMode_PWM-PWM Generation1 CH1,OCMode_PWM-PWM Generation2 CH2
 TIM1.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_PWM1
 TIM1.OCMode_PWM-PWM\ Generation2\ CH2=TIM_OCMODE_PWM1
-TIM1.Period=999
+TIM1.Period=36000-1
 TIM1.Prescaler=0
 TIM2.EncoderMode=TIM_ENCODERMODE_TI12
 TIM2.IPParameters=EncoderMode
